src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSE_BRACKET
    OP_LESS_EQUAL_GREATER
    TERNARY
    OPEN
    DOT
    COMMENT
    FORMAT
    OPEN_BRACKET
    TILDA
    FUNCTION
    CHDIR
    UNLESS
    WRITE
    BACKSLASH
    STR_OP
    CLOSE
    WHITESPACE
    EACH

Grammar

Rule 0     S' -> start
Rule 1     start -> segments
Rule 2     segments -> statements_subroutine segments
Rule 3     segments -> statements_subroutine M_segments
Rule 4     statements_subroutine -> statements
Rule 5     statements_subroutine -> subroutine
Rule 6     M_segments -> epsilon
Rule 7     block -> BLOCK_BEGIN statements BLOCK_END
Rule 8     statements -> statement statements
Rule 9     statements -> statement M_STATEMENTS
Rule 10    statement -> assignment M_QUAD
Rule 11    statement -> declaration M_QUAD
Rule 12    statement -> function_call M_QUAD
Rule 13    statement -> break M_QUAD
Rule 14    statement -> continue M_QUAD
Rule 15    statement -> print M_QUAD
Rule 16    statement -> return M_QUAD
Rule 17    statement -> die M_QUAD
Rule 18    statement -> chomp M_QUAD
Rule 19    statement -> expression M_QUAD SEMICOLON
Rule 20    statement -> use M_QUAD
Rule 21    statement -> while_statement M_QUAD
Rule 22    statement -> do_while_statement M_QUAD
Rule 23    statement -> for_statement M_QUAD
Rule 24    statement -> switch_statement M_QUAD
Rule 25    statement -> if_statement M_QUAD
Rule 26    statement -> ifelse_statement M_QUAD
Rule 27    use -> USE STRICT SEMICOLON
Rule 28    use -> USE WARNINGS SEMICOLON
Rule 29    block_or_statement -> block
Rule 30    block_or_statement -> statement
Rule 31    block_or_statement -> SEMICOLON
Rule 32    if_statement -> IF expression RPAR M_if block_or_statement
Rule 33    M_if -> epsilon
Rule 34    ifelse_statement -> IF expression RPAR M_if block_or_statement ELSE M_else block_or_statement
Rule 35    elsif_statement -> IF expression RPAR M_if block_or_statement elsif_statements ELSE M_else block_or_statement
Rule 36    elsif_statements -> M_elsif ELSIF expression RPAR block_or_statement M_elsif elsif_statements
Rule 37    elsif_statements -> M_elsif ELSIF expression RPAR block_or_statement
Rule 38    M_elsif -> epsilon
Rule 39    M_else -> epsilon
Rule 40    while_statement -> WHILE M_QUAD LPAR expression RPAR M_whileBranch block_or_statement
Rule 41    M_whileBranch -> epsilon
Rule 42    M_for -> epsilon
Rule 43    do_while_statement -> DO M_QUAD block WHILE LPAR expression RPAR M_whileBranch SEMICOLON
Rule 44    for_statement -> FOR LPAR assignment M_QUAD expression SEMICOLON M_for expression RPAR block_or_statement
Rule 45    for_statement -> FOR LPAR assignment M_QUAD expression SEMICOLON M_for expression RPAR SEMICOLON
Rule 46    multi_expression -> expression expressionlist
Rule 47    expressionlist -> COMMA expression expressionlist
Rule 48    expressionlist -> epsilon
Rule 49    multi_assignment -> SCALAR_VARIABLE ASSIGNMENT expression assignmentlist
Rule 50    multi_assignment -> SEMICOLON
Rule 51    assignmentlist -> COMMA SCALAR_VARIABLE ASSIGNMENT expression assignmentlist
Rule 52    assignmentlist -> SEMICOLON
Rule 53    keys_or_values -> KEYS
Rule 54    keys_or_values -> VALUES
Rule 55    statement -> FOREACH SCALAR_VARIABLE LPAR ARRAY_VARIABLE RPAR block_or_statement
Rule 56    statement -> FOREACH SCALAR_VARIABLE LPAR keys_or_values HASH_VARIABLE RPAR block_or_statement
Rule 57    statement -> FOREACH SCALAR_VARIABLE LPAR keys_or_values HASH_VARIABLE RPAR SEMICOLON
Rule 58    statement -> FOREACH LPAR INTEGER DOUBLE_DOT INTEGER RPAR block_or_statement
Rule 59    switch_statement -> SWITCH LPAR SCALAR_VARIABLE RPAR BLOCK_BEGIN cases BLOCK_END
Rule 60    cases -> case_block M_QUAD cases
Rule 61    cases -> case_block M_QUAD
Rule 62    cases -> ELSE block M_QUAD
Rule 63    case_block -> CASE switch_expression M_switch block
Rule 64    switch_expression -> expression
Rule 65    M_switch -> epsilon
Rule 66    assignment -> MY ARRAY_VARIABLE ASSIGNMENT array SEMICOLON
Rule 67    assignment -> MY ARRAY_VARIABLE ASSIGNMENT LPAR INTEGER DOUBLE_DOT INTEGER RPAR SEMICOLON
Rule 68    assignment -> MY ARRAY_VARIABLE ASSIGNMENT KEYS HASH_VARIABLE SEMICOLON
Rule 69    assignment -> MY ARRAY_VARIABLE ASSIGNMENT VALUES HASH_VARIABLE SEMICOLON
Rule 70    assignment -> MY SCALAR_VARIABLE ASSIGNMENT expression SEMICOLON
Rule 71    assignment -> MY HASH_VARIABLE ASSIGNMENT LPAR hashList RPAR SEMICOLON
Rule 72    assignment -> MY SCALAR_VARIABLE ASSIGNMENT function_call SEMICOLON
Rule 73    assignment -> SCALAR_VARIABLE ASSIGNMENT expression SEMICOLON
Rule 74    assignment -> SCALAR_VARIABLE ASSIGNMENT function_call SEMICOLON
Rule 75    assignment -> SCALAR_VARIABLE SIMULT_ASSIGNMENT function_call SEMICOLON
Rule 76    assignment -> ARRAY_VARIABLE ASSIGNMENT array SEMICOLON
Rule 77    assignment -> HASH_VARIABLE ASSIGNMENT LPAR hashList RPAR SEMICOLON
Rule 78    assignment -> ARRAY_VARIABLE ASSIGNMENT KEYS HASH_VARIABLE SEMICOLON
Rule 79    assignment -> ARRAY_VARIABLE ASSIGNMENT VALUES HASH_VARIABLE SEMICOLON
Rule 80    assignment -> ARRAY_VARIABLE ASSIGNMENT LPAR INTEGER DOUBLE_DOT INTEGER RPAR SEMICOLON
Rule 81    array -> ARRAY_VARIABLE
Rule 82    array -> LPAR arrayList RPAR
Rule 83    arrayList -> array_expression COMMA arrayList
Rule 84    arrayList -> array_expression
Rule 85    array_expression -> expression
Rule 86    arrayList -> epsilon
Rule 87    hashList -> expression COMMA expression COMMA hashList
Rule 88    hashList -> expression COMMA expression
Rule 89    declaration -> MY SCALAR_VARIABLE SEMICOLON
Rule 90    declaration -> MY ARRAY_VARIABLE SEMICOLON
Rule 91    function_call -> function_name LPAR argumentList RPAR SEMICOLON
Rule 92    function_name -> IDENTIFIER
Rule 93    argumentList -> epsilon
Rule 94    argumentList -> expression arguments
Rule 95    arguments -> COMMA expression arguments
Rule 96    arguments -> epsilon
Rule 97    return -> RETURN expression SEMICOLON
Rule 98    break -> BREAK SEMICOLON
Rule 99    continue -> CONTINUE SEMICOLON
Rule 100   chomp -> CHOMP expression SEMICOLON
Rule 101   subroutine -> SUB marker identifier M_sub block marker1
Rule 102   M_sub -> epsilon
Rule 103   identifier -> IDENTIFIER
Rule 104   marker -> epsilon
Rule 105   marker1 -> epsilon
Rule 106   print -> PRINT printlist SEMICOLON
Rule 107   die -> DIE printlist SEMICOLON
Rule 108   printlist -> expression
Rule 109   expression -> MINUS expression
Rule 110   expression -> INCREAMENT expression
Rule 111   expression -> expression INCREAMENT
Rule 112   expression -> DCREAMENT expression
Rule 113   expression -> expression DCREAMENT
Rule 114   expression -> expression PLUS expression
Rule 115   expression -> expression MINUS expression
Rule 116   expression -> expression MULTIPLY expression
Rule 117   expression -> expression DIVIDE expression
Rule 118   expression -> expression MODULUS expression
Rule 119   expression -> expression EXPONENT expression
Rule 120   expression -> expression Q_MARK M_QMARK expression COLON M_COLON expression
Rule 121   M_QMARK -> epsilon
Rule 122   M_COLON -> epsilon
Rule 123   expression -> expression OP_GREATER_THAN expression
Rule 124   expression -> expression OP_GREATER_THAN_E expression
Rule 125   expression -> expression OP_LESS_THAN expression
Rule 126   expression -> expression OP_LESS_THAN_E expression
Rule 127   expression -> expression EQUAL expression
Rule 128   expression -> expression NOT_EQUAL expression
Rule 129   expression -> expression STRING_CMP expression
Rule 130   expression -> expression AND expression
Rule 131   expression -> expression OR expression
Rule 132   expression -> NOT expression
Rule 133   expression -> LPAR expression RPAR
Rule 134   expression -> SCALAR_VARIABLE
Rule 135   expression -> constant
Rule 136   constant -> INTEGER
Rule 137   constant -> FLOAT
Rule 138   constant -> HEXADECIMAL
Rule 139   constant -> OCTAL
Rule 140   constant -> BINARY
Rule 141   constant -> EXPONANTIAL
Rule 142   constant -> STRING
Rule 143   constant -> PSEUDO_STRING
Rule 144   expression -> INPUT
Rule 145   M_QUAD -> epsilon
Rule 146   M_STATEMENTS -> epsilon
Rule 147   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 130
ARRAY_VARIABLE       : 55 66 67 68 69 76 78 79 80 81 90
ASSIGNMENT           : 49 51 66 67 68 69 70 71 72 73 74 76 77 78 79 80
BACKSLASH            : 
BINARY               : 140
BLOCK_BEGIN          : 7 59
BLOCK_END            : 7 59
BREAK                : 98
CASE                 : 63
CHDIR                : 
CHOMP                : 100
CLOSE                : 
CLOSE_BRACKET        : 
COLON                : 120
COMMA                : 47 51 83 87 87 88 95
COMMENT              : 
CONTINUE             : 99
DCREAMENT            : 112 113
DIE                  : 107
DIVIDE               : 117
DO                   : 43
DOT                  : 
DOUBLE_DOT           : 58 67 80
EACH                 : 
ELSE                 : 34 35 62
ELSIF                : 36 37
EQUAL                : 127
EXPONANTIAL          : 141
EXPONENT             : 119
FLOAT                : 137
FOR                  : 44 45
FOREACH              : 55 56 57 58
FORMAT               : 
FUNCTION             : 
HASH_VARIABLE        : 56 57 68 69 71 77 78 79
HEXADECIMAL          : 138
IDENTIFIER           : 92 103
IF                   : 32 34 35
INCREAMENT           : 110 111
INPUT                : 144
INTEGER              : 58 58 67 67 80 80 136
KEYS                 : 53 68 78
LPAR                 : 40 43 44 45 55 56 57 58 59 67 71 77 80 82 91 133
MINUS                : 109 115
MODULUS              : 118
MULTIPLY             : 116
MY                   : 66 67 68 69 70 71 72 89 90
NOT                  : 132
NOT_EQUAL            : 128
OCTAL                : 139
OPEN                 : 
OPEN_BRACKET         : 
OP_GREATER_THAN      : 123
OP_GREATER_THAN_E    : 124
OP_LESS_EQUAL_GREATER : 
OP_LESS_THAN         : 125
OP_LESS_THAN_E       : 126
OR                   : 131
PLUS                 : 114
PRINT                : 106
PSEUDO_STRING        : 143
Q_MARK               : 120
RETURN               : 97
RPAR                 : 32 34 35 36 37 40 43 44 45 55 56 57 58 59 67 71 77 80 82 91 133
SCALAR_VARIABLE      : 49 51 55 56 57 59 70 72 73 74 75 89 134
SEMICOLON            : 19 27 28 31 43 44 45 45 50 52 57 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 89 90 91 97 98 99 100 106 107
SIMULT_ASSIGNMENT    : 75
STRICT               : 27
STRING               : 142
STRING_CMP           : 129
STR_OP               : 
SUB                  : 101
SWITCH               : 59
TERNARY              : 
TILDA                : 
UNLESS               : 
USE                  : 27 28
VALUES               : 54 69 79
WARNINGS             : 28
WHILE                : 40 43
WHITESPACE           : 
WRITE                : 
error                : 

Nonterminals, with rules where they appear

M_COLON              : 120
M_QMARK              : 120
M_QUAD               : 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 40 43 44 45 60 61 62
M_STATEMENTS         : 9
M_else               : 34 35
M_elsif              : 36 36 37
M_for                : 44 45
M_if                 : 32 34 35
M_segments           : 3
M_sub                : 101
M_switch             : 63
M_whileBranch        : 40 43
argumentList         : 91
arguments            : 94 95
array                : 66 76
arrayList            : 82 83
array_expression     : 83 84
assignment           : 10 44 45
assignmentlist       : 49 51
block                : 29 43 62 63 101
block_or_statement   : 32 34 34 35 35 36 37 40 44 55 56 58
break                : 13
case_block           : 60 61
cases                : 59 60
chomp                : 18
constant             : 135
continue             : 14
declaration          : 11
die                  : 17
do_while_statement   : 22
elsif_statement      : 
elsif_statements     : 35 36
epsilon              : 6 33 38 39 41 42 48 65 86 93 96 102 104 105 121 122 145 146
expression           : 19 32 34 35 36 37 40 43 44 44 45 45 46 47 49 51 64 70 73 85 87 87 88 88 94 95 97 100 108 109 110 111 112 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 120 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 133
expressionlist       : 46 47
for_statement        : 23
function_call        : 12 72 74 75
function_name        : 91
hashList             : 71 77 87
identifier           : 101
if_statement         : 25
ifelse_statement     : 26
keys_or_values       : 56 57
marker               : 101
marker1              : 101
multi_assignment     : 
multi_expression     : 
print                : 15
printlist            : 106 107
return               : 16
segments             : 1 2
start                : 0
statement            : 8 9 30
statements           : 4 7 8
statements_subroutine : 2 3
subroutine           : 5
switch_expression    : 63
switch_statement     : 24
use                  : 20
while_statement      : 21

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . segments
    (2) segments -> . statements_subroutine segments
    (3) segments -> . statements_subroutine M_segments
    (4) statements_subroutine -> . statements
    (5) statements_subroutine -> . subroutine
    (8) statements -> . statement statements
    (9) statements -> . statement M_STATEMENTS
    (101) subroutine -> . SUB marker identifier M_sub block marker1
    (10) statement -> . assignment M_QUAD
    (11) statement -> . declaration M_QUAD
    (12) statement -> . function_call M_QUAD
    (13) statement -> . break M_QUAD
    (14) statement -> . continue M_QUAD
    (15) statement -> . print M_QUAD
    (16) statement -> . return M_QUAD
    (17) statement -> . die M_QUAD
    (18) statement -> . chomp M_QUAD
    (19) statement -> . expression M_QUAD SEMICOLON
    (20) statement -> . use M_QUAD
    (21) statement -> . while_statement M_QUAD
    (22) statement -> . do_while_statement M_QUAD
    (23) statement -> . for_statement M_QUAD
    (24) statement -> . switch_statement M_QUAD
    (25) statement -> . if_statement M_QUAD
    (26) statement -> . ifelse_statement M_QUAD
    (55) statement -> . FOREACH SCALAR_VARIABLE LPAR ARRAY_VARIABLE RPAR block_or_statement
    (56) statement -> . FOREACH SCALAR_VARIABLE LPAR keys_or_values HASH_VARIABLE RPAR block_or_statement
    (57) statement -> . FOREACH SCALAR_VARIABLE LPAR keys_or_values HASH_VARIABLE RPAR SEMICOLON
    (58) statement -> . FOREACH LPAR INTEGER DOUBLE_DOT INTEGER RPAR block_or_statement
    (66) assignment -> . MY ARRAY_VARIABLE ASSIGNMENT array SEMICOLON
    (67) assignment -> . MY ARRAY_VARIABLE ASSIGNMENT LPAR INTEGER DOUBLE_DOT INTEGER RPAR SEMICOLON
    (68) assignment -> . MY ARRAY_VARIABLE ASSIGNMENT KEYS HASH_VARIABLE SEMICOLON
    (69) assignment -> . MY ARRAY_VARIABLE ASSIGNMENT VALUES HASH_VARIABLE SEMICOLON
    (70) assignment -> . MY SCALAR_VARIABLE ASSIGNMENT expression SEMICOLON
    (71) assignment -> . MY HASH_VARIABLE ASSIGNMENT LPAR hashList RPAR SEMICOLON
    (72) assignment -> . MY SCALAR_VARIABLE ASSIGNMENT function_call SEMICOLON
    (73) assignment -> . SCALAR_VARIABLE ASSIGNMENT expression SEMICOLON
    (74) assignment -> . SCALAR_VARIABLE ASSIGNMENT function_call SEMICOLON
    (75) assignment -> . SCALAR_VARIABLE SIMULT_ASSIGNMENT function_call SEMICOLON
    (76) assignment -> . ARRAY_VARIABLE ASSIGNMENT array SEMICOLON
    (77) assignment -> . HASH_VARIABLE ASSIGNMENT LPAR hashList RPAR SEMICOLON
    (78) assignment -> . ARRAY_VARIABLE ASSIGNMENT KEYS HASH_VARIABLE SEMICOLON
    (79) assignment -> . ARRAY_VARIABLE ASSIGNMENT VALUES HASH_VARIABLE SEMICOLON
    (80) assignment -> . ARRAY_VARIABLE ASSIGNMENT LPAR INTEGER DOUBLE_DOT INTEGER RPAR SEMICOLON
    (89) declaration -> . MY SCALAR_VARIABLE SEMICOLON
    (90) declaration -> . MY ARRAY_VARIABLE SEMICOLON
    (91) function_call -> . function_name LPAR argumentList RPAR SEMICOLON
    (98) break -> . BREAK SEMICOLON
    (99) continue -> . CONTINUE SEMICOLON
    (106) print -> . PRINT printlist SEMICOLON
    (97) return -> . RETURN expression SEMICOLON
    (107) die -> . DIE printlist SEMICOLON
    (100) chomp -> . CHOMP expression SEMICOLON
    (109) expression -> . MINUS expression
    (110) expression -> . INCREAMENT expression
    (111) expression -> . expression INCREAMENT
    (112) expression -> . DCREAMENT expression
    (113) expression -> . expression DCREAMENT
    (114) expression -> . expression PLUS expression
    (115) expression -> . expression MINUS expression
    (116) expression -> . expression MULTIPLY expression
    (117) expression -> . expression DIVIDE expression
    (118) expression -> . expression MODULUS expression
    (119) expression -> . expression EXPONENT expression
    (120) expression -> . expression Q_MARK M_QMARK expression COLON M_COLON expression
    (123) expression -> . expression OP_GREATER_THAN expression
    (124) expression -> . expression OP_GREATER_THAN_E expression
    (125) expression -> . expression OP_LESS_THAN expression
    (126) expression -> . expression OP_LESS_THAN_E expression
    (127) expression -> . expression EQUAL expression
    (128) expression -> . expression NOT_EQUAL expression
    (129) expression -> . expression STRING_CMP expression
    (130) expression -> . expression AND expression
    (131) expression -> . expression OR expression
    (132) expression -> . NOT expression
    (133) expression -> . LPAR expression RPAR
    (134) expression -> . SCALAR_VARIABLE
    (135) expression -> . constant
    (144) expression -> . INPUT
    (27) use -> . USE STRICT SEMICOLON
    (28) use -> . USE WARNINGS SEMICOLON
    (40) while_statement -> . WHILE M_QUAD LPAR expression RPAR M_whileBranch block_or_statement
    (43) do_while_statement -> . DO M_QUAD block WHILE LPAR expression RPAR M_whileBranch SEMICOLON
    (44) for_statement -> . FOR LPAR assignment M_QUAD expression SEMICOLON M_for expression RPAR block_or_statement
    (45) for_statement -> . FOR LPAR assignment M_QUAD expression SEMICOLON M_for expression RPAR SEMICOLON
    (59) switch_statement -> . SWITCH LPAR SCALAR_VARIABLE RPAR BLOCK_BEGIN cases BLOCK_END
    (32) if_statement -> . IF expression RPAR M_if block_or_statement
    (34) ifelse_statement -> . IF expression RPAR M_if block_or_statement ELSE M_else block_or_statement
    (92) function_name -> . IDENTIFIER
    (136) constant -> . INTEGER
    (137) constant -> . FLOAT
    (138) constant -> . HEXADECIMAL
    (139) constant -> . OCTAL
    (140) constant -> . BINARY
    (141) constant -> . EXPONANTIAL
    (142) constant -> . STRING
    (143) constant -> . PSEUDO_STRING

    SUB             shift and go to state 34
    FOREACH         shift and go to state 9
    MY              shift and go to state 31
    SCALAR_VARIABLE shift and go to state 27
    ARRAY_VARIABLE  shift and go to state 37
    HASH_VARIABLE   shift and go to state 25
    BREAK           shift and go to state 49
    CONTINUE        shift and go to state 29
    PRINT           shift and go to state 15
    RETURN          shift and go to state 13
    DIE             shift and go to state 52
    CHOMP           shift and go to state 48
    MINUS           shift and go to state 2
    INCREAMENT      shift and go to state 39
    DCREAMENT       shift and go to state 4
    NOT             shift and go to state 30
    LPAR            shift and go to state 1
    INPUT           shift and go to state 26
    USE             shift and go to state 50
    WHILE           shift and go to state 36
    DO              shift and go to state 35
    FOR             shift and go to state 24
    SWITCH          shift and go to state 41
    IF              shift and go to state 56
    IDENTIFIER      shift and go to state 43
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 58
    HEXADECIMAL     shift and go to state 16
    OCTAL           shift and go to state 10
    BINARY          shift and go to state 11
    EXPONANTIAL     shift and go to state 20
    STRING          shift and go to state 54
    PSEUDO_STRING   shift and go to state 28

    statements                     shift and go to state 33
    function_call                  shift and go to state 14
    constant                       shift and go to state 51
    switch_statement               shift and go to state 17
    ifelse_statement               shift and go to state 19
    use                            shift and go to state 38
    segments                       shift and go to state 3
    start                          shift and go to state 40
    while_statement                shift and go to state 5
    statement                      shift and go to state 42
    print                          shift and go to state 22
    if_statement                   shift and go to state 53
    function_name                  shift and go to state 44
    for_statement                  shift and go to state 6
    return                         shift and go to state 7
    do_while_statement             shift and go to state 18
    assignment                     shift and go to state 55
    break                          shift and go to state 8
    chomp                          shift and go to state 45
    declaration                    shift and go to state 46
    subroutine                     shift and go to state 47
    die                            shift and go to state 12
    continue                       shift and go to state 21
    statements_subroutine          shift and go to state 32
    expression                     shift and go to state 57

state 1

    (133) expression -> LPAR . expression RPAR
    (109) expression -> . MINUS expression
    (110) expression -> . INCREAMENT expression
    (111) expression -> . expression INCREAMENT
    (112) expression -> . DCREAMENT expression
    (113) expression -> . expression DCREAMENT
    (114) expression -> . expression PLUS expression
    (115) expression -> . expression MINUS expression
    (116) expression -> . expression MULTIPLY expression
    (117) expression -> . expression DIVIDE expression
    (118) expression -> . expression MODULUS expression
    (119) expression -> . expression EXPONENT expression
    (120) expression -> . expression Q_MARK M_QMARK expression COLON M_COLON expression
    (123) expression -> . expression OP_GREATER_THAN expression
    (124) expression -> . expression OP_GREATER_THAN_E expression
    (125) expression -> . expression OP_LESS_THAN expression
    (126) expression -> . expression OP_LESS_THAN_E expression
    (127) expression -> . expression EQUAL expression
    (128) expression -> . expression NOT_EQUAL expression
    (129) expression -> . expression STRING_CMP expression
    (130) expression -> . expression AND expression
    (131) expression -> . expression OR expression
    (132) expression -> . NOT expression
    (133) expression -> . LPAR expression RPAR
    (134) expression -> . SCALAR_VARIABLE
    (135) expression -> . constant
    (144) expression -> . INPUT
    (136) constant -> . INTEGER
    (137) constant -> . FLOAT
    (138) constant -> . HEXADECIMAL
    (139) constant -> . OCTAL
    (140) constant -> . BINARY
    (141) constant -> . EXPONANTIAL
    (142) constant -> . STRING
    (143) constant -> . PSEUDO_STRING

    MINUS           shift and go to state 2
    INCREAMENT      shift and go to state 39
    DCREAMENT       shift and go to state 4
    NOT             shift and go to state 30
    LPAR            shift and go to state 1
    SCALAR_VARIABLE shift and go to state 59
    INPUT           shift and go to state 26
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 58
    HEXADECIMAL     shift and go to state 16
    OCTAL           shift and go to state 10
    BINARY          shift and go to state 11
    EXPONANTIAL     shift and go to state 20
    STRING          shift and go to state 54
    PSEUDO_STRING   shift and go to state 28

    constant                       shift and go to state 51
    expression                     shift and go to state 60

state 2

    (109) expression -> MINUS . expression
    (109) expression -> . MINUS expression
    (110) expression -> . INCREAMENT expression
    (111) expression -> . expression INCREAMENT
    (112) expression -> . DCREAMENT expression
    (113) expression -> . expression DCREAMENT
    (114) expression -> . expression PLUS expression
    (115) expression -> . expression MINUS expression
    (116) expression -> . expression MULTIPLY expression
    (117) expression -> . expression DIVIDE expression
    (118) expression -> . expression MODULUS expression
    (119) expression -> . expression EXPONENT expression
    (120) expression -> . expression Q_MARK M_QMARK expression COLON M_COLON expression
    (123) expression -> . expression OP_GREATER_THAN expression
    (124) expression -> . expression OP_GREATER_THAN_E expression
    (125) expression -> . expression OP_LESS_THAN expression
    (126) expression -> . expression OP_LESS_THAN_E expression
    (127) expression -> . expression EQUAL expression
    (128) expression -> . expression NOT_EQUAL expression
    (129) expression -> . expression STRING_CMP expression
    (130) expression -> . expression AND expression
    (131) expression -> . expression OR expression
    (132) expression -> . NOT expression
    (133) expression -> . LPAR expression RPAR
    (134) expression -> . SCALAR_VARIABLE
    (135) expression -> . constant
    (144) expression -> . INPUT
    (136) constant -> . INTEGER
    (137) constant -> . FLOAT
    (138) constant -> . HEXADECIMAL
    (139) constant -> . OCTAL
    (140) constant -> . BINARY
    (141) constant -> . EXPONANTIAL
    (142) constant -> . STRING
    (143) constant -> . PSEUDO_STRING

    MINUS           shift and go to state 2
    INCREAMENT      shift and go to state 39
    DCREAMENT       shift and go to state 4
    NOT             shift and go to state 30
    LPAR            shift and go to state 1
    SCALAR_VARIABLE shift and go to state 59
    INPUT           shift and go to state 26
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 58
    HEXADECIMAL     shift and go to state 16
    OCTAL           shift and go to state 10
    BINARY          shift and go to state 11
    EXPONANTIAL     shift and go to state 20
    STRING          shift and go to state 54
    PSEUDO_STRING   shift and go to state 28

    constant                       shift and go to state 51
    expression                     shift and go to state 61

state 3

    (1) start -> segments .

    $end            reduce using rule 1 (start -> segments .)


state 4

    (112) expression -> DCREAMENT . expression
    (109) expression -> . MINUS expression
    (110) expression -> . INCREAMENT expression
    (111) expression -> . expression INCREAMENT
    (112) expression -> . DCREAMENT expression
    (113) expression -> . expression DCREAMENT
    (114) expression -> . expression PLUS expression
    (115) expression -> . expression MINUS expression
    (116) expression -> . expression MULTIPLY expression
    (117) expression -> . expression DIVIDE expression
    (118) expression -> . expression MODULUS expression
    (119) expression -> . expression EXPONENT expression
    (120) expression -> . expression Q_MARK M_QMARK expression COLON M_COLON expression
    (123) expression -> . expression OP_GREATER_THAN expression
    (124) expression -> . expression OP_GREATER_THAN_E expression
    (125) expression -> . expression OP_LESS_THAN expression
    (126) expression -> . expression OP_LESS_THAN_E expression
    (127) expression -> . expression EQUAL expression
    (128) expression -> . expression NOT_EQUAL expression
    (129) expression -> . expression STRING_CMP expression
    (130) expression -> . expression AND expression
    (131) expression -> . expression OR expression
    (132) expression -> . NOT expression
    (133) expression -> . LPAR expression RPAR
    (134) expression -> . SCALAR_VARIABLE
    (135) expression -> . constant
    (144) expression -> . INPUT
    (136) constant -> . INTEGER
    (137) constant -> . FLOAT
    (138) constant -> . HEXADECIMAL
    (139) constant -> . OCTAL
    (140) constant -> . BINARY
    (141) constant -> . EXPONANTIAL
    (142) constant -> . STRING
    (143) constant -> . PSEUDO_STRING

    MINUS           shift and go to state 2
    INCREAMENT      shift and go to state 39
    DCREAMENT       shift and go to state 4
    NOT             shift and go to state 30
    LPAR            shift and go to state 1
    SCALAR_VARIABLE shift and go to state 59
    INPUT           shift and go to state 26
    INTEGER         shift and go to state 23
    FLOAT           shift and go to state 58
    HEXADECIMAL     shift and go to state 16
    OCTAL           shift and go to state 10
    BINARY          shift and go to state 11
    EXPONANTIAL     shift and go to state 20
    STRING          shift and go to state 54
    PSEUDO_STRING   shift and go to state 28

    constant                       shift and go to state 51
    expression                     shift and go to state 62

state 5

    (21) statement -> while_statement . M_QUAD
    (145) M_QUAD -> . epsilon
    (147) epsilon -> .

    FOREACH         reduce using rule 147 (epsilon -> .)
    MY              reduce using rule 147 (epsilon -> .)
    SCALAR_VARIABLE reduce using rule 147 (epsilon -> .)
    ARRAY_VARIABLE  reduce using rule 147 (epsilon -> .)
    HASH_VARIABLE   reduce using rule 147 (epsilon -> .)
    BREAK           reduce using rule 147 (epsilon -> .)
    CONTINUE        reduce using rule 147 (epsilon -> .)
    PRINT           reduce using rule 147 (epsilon -> .)
    RETURN          reduce using rule 147 (epsilon -> .)
    DIE             reduce using rule 147 (epsilon -> .)
    CHOMP           reduce using rule 147 (epsilon -> .)
    MINUS           reduce using rule 147 (epsilon -> .)
    INCREAMENT      reduce using rule 147 (epsilon -> .)
    DCREAMENT       reduce using rule 147 (epsilon -> .)
    NOT             reduce using rule 147 (epsilon -> .)
    LPAR            reduce using rule 147 (epsilon -> .)
    INPUT           reduce using rule 147 (epsilon -> .)
    USE             reduce using rule 147 (epsilon -> .)
    WHILE           reduce using rule 147 (epsilon -> .)
    DO              reduce using rule 147 (epsilon -> .)
    FOR             reduce using rule 147 (epsilon -> .)
    SWITCH          reduce using rule 147 (epsilon -> .)
    IF              reduce using rule 147 (epsilon -> .)
    IDENTIFIER      reduce using rule 147 (epsilon -> .)
    INTEGER         reduce using rule 147 (epsilon -> .)
    FLOAT           reduce using rule 147 (epsilon -> .)
    HEXADECIMAL     reduce using rule 147 (epsilon -> .)
    OCTAL           reduce using rule 147 (epsilon -> .)
    BINARY          reduce using rule 147 (epsilon -> .)
    EXPONANTIAL     reduce using rule 147 (epsilon -> .)
    STRING          reduce using rule 147 (epsilon -> .)
    PSEUDO_STRING   reduce using rule 147 (epsilon -> .)
    SUB             reduce using rule 147 (epsilon -> .)
    $end            reduce using rule 147 (epsilon -> .)
    BLOCK_END       reduce using rule 147 (epsilon -> .)
    ELSE            reduce using rule 147 (epsilon -> .)

    epsilon                        shift and go to state 63
    M_QUAD                         shift and go to state 64

state 6

    (23) statement -> for_statement . M_QUAD
    (145) M_QUAD -> . epsilon
    (147) epsilon -> .
